--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -91,27 +91,27 @@ body {
   
 
   /* Eye Color Sampler*/
-#color-samples {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px; /* Space between samples */
-  margin: 20px 0; /* Margin above and below the samples */
-}
-
-.color-sample {
-  width: 80px; /* Set a fixed width */
-  height: 50px; /* Set a fixed height */
-  color: white; /* Text color for better visibility */
-  text-align: center; /* Center the text */
-  line-height: 50px; /* Vertically center the text */
-  font-weight: bold; /* Make the text bold */
-  border-radius: 5px; /* Rounded corners */
-  border: 1px solid #000000; /* Optional: Add a white border */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Optional: Add shadow for depth */
-  transition: transform 0.2s; /* Smooth transition for hover effect */
-}
-
-.color-sample:hover {
-  transform: scale(1.05); /* Slightly enlarge on hover */
-  cursor: pointer; /* Change cursor to pointer on hover */
-}
+  #color-samples {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 20px 0;
+  }
+  
+  .color-sample {
+    width: 80px;
+    height: 50px;
+    color: white;
+    text-align: center;
+    line-height: 50px;
+    font-weight: bold;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+  }
+  
+  .color-sample:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
